--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
 .App {
-  text-align: center;
+    text-align: center;
+    display: flex;
+    max-height: 100%;
+    text-transform: capitalize;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
+}
+
+.all-pokemon {
+    max-height: 100vh;
+    overflow-y: scroll;
+    flex: 1;
+}
+
+.all-pokemon::-webkit-scrollbar {
+    display: none;
+}
+
+.pokemon-card {
+    display: flex;
+    align-items: center;
+    border: 1px solid black;
+    padding-left: 5%;
+    height: 20%;
+    font-size: 4vmin;
+    background-color: #f6f6f8;
+}
+
+.backing-circle {
+    margin-top: 10px;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    align-items: center;
+    display: flex;
+    margin-right: 10%;
+}
+
+.backing-circle img {
+    height: 150px;
+    width: auto;
+}
+
+.detailed-view {
+    flex: 1;
+    font-size: 4vmin;
+}
+
+.detailed-view img {
+    height: 20vh;
+    width: auto;
+}
+
+.stat-chart {
+    width: 40vw;
+    margin-left: 0;
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.pokemon-types {
+    display: flex;
+    flex-direction: row;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+}
+
+.type-icon {
+    border-radius: 10px;
+    padding: 3px 6px;
+    margin: 1%;
+    font-size: 2.5vmin;
+    min-width: 75px;
+    color: #fff;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
