--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato&family=Neucha&family=Raleway&family=Roboto&display=swap");
+
 .App {
     text-align: center;
     display: flex;
     max-height: 100%;
     text-transform: capitalize;
+    font-family: "Lato", "sans-serif";
 }
 
 .App-logo {
