--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
 .all-pokemon {
     max-height: 100vh;
     overflow-y: scroll;
-    flex: 1;
+    flex: 2;
 }
 
 .all-pokemon::-webkit-scrollbar {
@@ -47,11 +47,11 @@
 .pokemon-card {
     display: flex;
     align-items: center;
-    border: 1px solid black;
+    border: 0.1vmin solid #f7fcff;
     padding-left: 5%;
     height: 20%;
     font-size: 4vmin;
-    background-color: #f6f6f8;
+    background-color: #eff8ff;
 }
 
 .backing-circle {
@@ -70,8 +70,9 @@
 }
 
 .detailed-view {
-    flex: 1;
+    flex: 3;
     font-size: 4vmin;
+    background-color: #828a95;
 }
 
 .detailed-view img {
@@ -80,12 +81,18 @@
 }
 
 .stat-chart {
-    width: 40vw;
+    width: 45vw;
     margin-left: 0;
     display: flex;
     flex-direction: column;
     margin-left: auto;
     margin-right: auto;
+    background-color: rgba(255, 255, 255, 0.7);
+    align-items: center;
+}
+
+.chart {
+    width: 40vw;
 }
 
 .pokemon-types {
@@ -102,6 +109,24 @@
     margin: 1%;
     font-size: 2.5vmin;
     min-width: 75px;
+    color: #fff;
+}
+
+.navigation-bar {
+    background-color: #5b6368;
+    display: flex;
+    height: 5vh;
+    padding-left: 10%;
+    padding-right: 10%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.navigation-bar button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 2rem;
     color: #fff;
 }
 
