--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,13 +1,14 @@
 .search-container {
-    height: 5vh;
+    height: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .search-input {
     width: 80%;
-    height: 60%;
+    height: 30%;
     outline: none;
     font-size: 1rem;
 }
