Made EvolutionChain component (pre-implementation)

--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,10 @@
     color: #fff;
 }
 
+.type-container {
+    margin-bottom: 5%;
+}
+
 @keyframes App-logo-spin {
     from {
         transform: rotate(0deg);
