--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,5 +1,6 @@
 .search-inputs {
     display: flex;
+    width: 100%;
 }
 
 .search-form-container {
@@ -20,18 +21,18 @@
 .search input {
     background-color: white;
     border: 0;
-    border-radius: 2px;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-    font-size: 18px;
-    padding: 15px;
-    height: 20px;
+    border-radius: 2%;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    font-size: 2vmin;
+    padding: 3.3%;
+    height: 2vmin;
     width: 400px;
 }
 
 .search-icon {
-    height: 50px;
-    width: 50px;
+    height: 5.2vmin;
+    width: 5.2vmin;
     background-color: white;
     display: grid;
     place-items: center;
@@ -41,15 +42,15 @@ input:focus {
     outline: none;
 }
 .search-icon svg {
-    font-size: 35px;
+    font-size: 3.5vmin;
 }
 
 .data-result {
     margin-top: 5px;
-    width: 300px;
-    height: 200px;
+    width: 100%;
+    height: 20vh;
     background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 0.5vmin 2.5vmin;
     overflow: hidden;
     overflow-y: auto;
 }
@@ -60,18 +61,13 @@ input:focus {
 
 .data-result .data-item {
     width: 100%;
-    height: 50px;
     display: flex;
     align-items: center;
     color: black;
 }
 
-.data-item p {
-    margin-left: 10px;
-}
-
 .pokemon-option {
-    font-size: 25px;
+    font-size: 2.5vmin;
 }
 
 .pokemon-option:hover {
