--- a/src/components/PokemonBlurb/PokemonBlurb.css
+++ b/src/components/PokemonBlurb/PokemonBlurb.css
@@ -1,16 +1,11 @@
 .blurb-container {
-    width: 40vw;
-    margin-left: 0;
+    max-width: 60%;
     display: flex;
     flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 5% auto;
+    padding: 2% 2%;
     background-color: rgba(255, 255, 255, 0.8);
     align-items: center;
     font-size: 1.5rem;
     text-transform: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-top: 5%;
-    margin-bottom: 2%;
 }
