--- a/src/components/PokemonBlurb/PokemonBlurb.css
+++ b/src/components/PokemonBlurb/PokemonBlurb.css
@@ -9,3 +9,9 @@
     font-size: 1.5rem;
     text-transform: none;
 }
+
+@media only screen and (max-width: 850px) {
+    .blurb-container {
+        font-size: 0.8rem;
+    }
+}
