--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 .App {
     text-align: center;
     display: flex;
-    max-height: 100%;
+    max-height: 100vh;
     text-transform: capitalize;
     font-family: "Lato", "sans-serif";
 }
@@ -38,10 +38,6 @@
     max-height: 100vh;
     overflow-y: scroll;
     flex: 2;
-}
-
-.all-pokemon::-webkit-scrollbar {
-    display: none;
 }
 
 .detailed-view {
