modified stylings and fixed nav arrows

--- a/src/components/AllPokemon/AllPokemon.css
+++ b/src/components/AllPokemon/AllPokemon.css
@@ -1,3 +1,9 @@
 .all-pokemon::-webkit-scrollbar {
     display: none;
 }
+
+.all-pokemon {
+    max-height: 100vh;
+    overflow-y: scroll;
+    flex: 2;
+}
