--- a/src/components/DetailedView/DetailedView.css
+++ b/src/components/DetailedView/DetailedView.css
@@ -5,4 +5,11 @@
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
+    background-color: #828a95;
+    font-size: 2rem;
+}
+
+.detailed-view img {
+    height: 20vh;
+    width: auto;
 }
