--- a/src/components/DetailedView/DetailedView.css
+++ b/src/components/DetailedView/DetailedView.css
@@ -1,15 +1,41 @@
 .detailed-view {
-    min-height: 100vh;
-    max-height: 100vh;
+    min-height: 100%;
+    max-height: 100%;
     width: 60%;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
     background-color: #828a95;
-    font-size: 2rem;
+    font-size: 1.6rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.detailed-view img {
-    height: 20vh;
-    width: auto;
+.bio-container img {
+    height: 25%;
+    width: 25%;
+    align-self: center;
+    margin: 2% auto;
+}
+
+.bio-container {
+    min-height: 50%;
+    max-height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.attributes-container {
+    min-height: 50%;
+    max-height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.pokemon-name {
+    font-size: 2rem;
+    margin-top: 5%;
 }
