--- a/src/components/PokemonBlurb/PokemonBlurb.css
+++ b/src/components/PokemonBlurb/PokemonBlurb.css
@@ -2,7 +2,7 @@
     max-width: 60%;
     display: flex;
     flex-direction: column;
-    margin: 5% auto;
+    margin: 0 auto;
     padding: 2% 2%;
     background-color: rgba(255, 255, 255, 0.8);
     align-items: center;
