--- a/src/components/DetailedView/DetailedView.css
+++ b/src/components/DetailedView/DetailedView.css
@@ -1,6 +1,6 @@
-.detailed-view {
-    min-height: 100%;
-    max-height: 100%;
+.detailed-view-container {
+    min-height: 100vh;
+    max-height: 100vh;
     width: 60%;
     margin-left: auto;
     margin-right: auto;
@@ -12,19 +12,26 @@
     justify-content: space-between;
 }
 
-.bio-container img {
-    height: 25%;
-    width: 25%;
-    align-self: center;
-    margin: 2% auto;
+.detailed-view {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 5%;
 }
 
 .bio-container {
-    min-height: 50%;
-    max-height: 50%;
+    min-height: 45%;
+    max-height: 45%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.bio-container img {
+    height: 50%;
+    width: auto;
+    align-self: center;
+    margin: 2% auto;
 }
 
 .attributes-container {
