Added chart responsiveness

--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -1,6 +1,6 @@
 .navigation-bar {
     background-color: #5b6368;
-    height: 5vh;
+    height: 5%;
     align-items: center;
     display: flex;
 }
