--- a/src/components/PokemonBlurb/PokemonBlurb.css
+++ b/src/components/PokemonBlurb/PokemonBlurb.css
@@ -8,6 +8,7 @@
     align-items: center;
     font-size: 1.5rem;
     text-transform: none;
+    max-height: 50%;
 }
 
 @media only screen and (max-width: 850px) {
