--- a/src/components/StatChart/StatChart.css
+++ b/src/components/StatChart/StatChart.css
@@ -1,5 +1,15 @@
 .chart canvas {
     font-size: 2rem;
+    width: 100% !important;
+    height: 100% !important;
+}
+
+.chart {
+    display: flex;
+    height: 80%;
+    justify-content: center !important;
+    align-items: center !important;
+    text-align: center;
 }
 
 .stat-chart {
@@ -11,8 +21,7 @@
     background-color: rgba(255, 255, 255, 0.8);
     align-items: center;
     margin: 1% auto;
-}
-
-.chart {
-    width: 100%;
+    height: 60%;
+    align-items: center;
+    justify-content: center;
 }
