Added styling to SearchBar

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,14 +1,18 @@
 .search-container {
-    height: 10vh;
+    height: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-color: rgba(204, 0, 0, 1);
 }
 
 .search-input {
     width: 80%;
-    height: 30%;
+    height: 40%;
     outline: none;
-    font-size: 1rem;
+    padding-left: 1rem;
+    font-size: 1.5rem;
+    border: 0px;
+    border-radius: 2rem;
 }
