--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -16,7 +16,7 @@
     background: none;
     border: none;
     cursor: pointer;
-    font-size: 2rem;
+    font-size: 1.75vmax;
     color: #fff;
 }
 
