--- a/src/components/PokemonBlurb/PokemonBlurb.css
+++ b/src/components/PokemonBlurb/PokemonBlurb.css
@@ -6,13 +6,13 @@
     padding: 2% 2%;
     background-color: rgba(255, 255, 255, 0.8);
     align-items: center;
-    font-size: 1.5rem;
+    font-size: 1vmax;
     text-transform: none;
     max-height: 50%;
 }
 
 @media only screen and (max-width: 850px) {
     .blurb-container {
-        font-size: 0.8rem;
+        font-size: 1vmax;
     }
 }
