--- a/src/components/PokemonCard/PokemonCard.css
+++ b/src/components/PokemonCard/PokemonCard.css
@@ -11,7 +11,7 @@
 .backing-circle {
     margin-top: 2%;
     margin-bottom: 2%;
-    width: 10vw;
+    width: 25%;
     height: auto;
     border-radius: 50%;
     align-items: center;
@@ -21,5 +21,5 @@
 
 .backing-circle img {
     height: auto;
-    width: 10vw;
+    width: 100%;
 }
