--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -12,7 +12,7 @@
     height: 40%;
     outline: none;
     padding-left: 1rem;
-    font-size: 1.5rem;
+    font-size: 2vmin;
     border: 0px;
     border-radius: 2rem;
 }
