--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,41 +1,43 @@
 .search-inputs {
     display: flex;
     width: 100%;
+    justify-content: center;
+    height: 50%;
 }
 
 .search-form-container {
     margin-top: 5%;
     display: flex;
     justify-content: center;
-    height: 40vh;
+    height: 100%;
     width: 100%;
 }
 
 .search {
     display: flex;
     flex-direction: column;
-    width: 80%;
-    margin-left: 20%;
-    margin-right: 20%;
+    width: 100%;
+    height: 10%;
 }
 
 .search input {
     background-color: white;
     border: 0;
-    border-radius: 2%;
+    border-radius: 2rem;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     font-size: 2vmin;
-    padding: 3%;
-    width: 400px;
+    width: 40%;
+    padding: 2vmin;
 }
 
 .search-icon {
     height: 100%;
-    width: 20%;
+    width: 10%;
     background-color: white;
     display: grid;
     place-items: center;
+    border-radius: 0 2rem 2rem 0;
 }
 
 input:focus {
@@ -43,16 +45,19 @@ input:focus {
 }
 .search-icon svg {
     font-size: 3.5vmin;
+    padding: auto;
 }
 
 .data-result {
     margin-top: 1%;
-    width: 100%;
-    height: 20vh;
+    width: 45%;
+    height: 100%;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 0.5vmin 2.5vmin;
     overflow: hidden;
     overflow-y: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .data-result::-webkit-scrollbar {
