Fixed bug with SearchForm display

--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -2,7 +2,6 @@
     display: flex;
     width: 100%;
     justify-content: center;
-    height: 50%;
 }
 
 .search-form-container {
@@ -17,33 +16,43 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 10%;
+    height: 100%;
 }
 
 .search input {
     background-color: white;
     border: 0;
-    border-radius: 2rem;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
     font-size: 2vmin;
     width: 40%;
-    padding: 2vmin;
+    height: 100%;
+    padding: 0.5vmin 0;
 }
 
-.search-icon {
+.close-icon {
     height: 100%;
-    width: 10%;
+    width: 5%;
     background-color: white;
     display: grid;
     place-items: center;
     border-radius: 0 2rem 2rem 0;
+    padding: 0.5vmin;
+}
+
+.search-icon {
+    height: 100%;
+    width: 5%;
+    background-color: white;
+    display: grid;
+    place-items: center;
+    border-radius: 2rem 0 0 2rem;
+    padding: 0.5vmin;
 }
 
 input:focus {
     outline: none;
 }
-.search-icon svg {
+.search-icon svg,
+.close-icon svg {
     font-size: 3.5vmin;
     padding: auto;
 }
@@ -51,7 +60,7 @@ input:focus {
 .data-result {
     margin-top: 1%;
     width: 45%;
-    height: 100%;
+    height: 20%;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 0.5vmin 2.5vmin;
     overflow: hidden;
