--- a/src/App.css
+++ b/src/App.css
@@ -73,11 +73,144 @@
     color: #fff;
 }
 
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
+@media only screen and (max-width: 500px) {
+    .App {
+        display: flex;
+        flex-direction: column;
     }
-    to {
-        transform: rotate(360deg);
+
+    .browse-interface-container {
+        min-height: 25vh !important;
+        max-height: 25vh !important;
+        width: 100vw !important;
+        overflow: hidden;
+    }
+
+    .all-pokemon::-webkit-scrollbar {
+        display: none;
+    }
+
+    .all-pokemon {
+        min-height: 20vh !important;
+        max-height: 20vh !important;
+        min-width: 100vw !important;
+        overflow-y: hidden;
+        display: flex;
+    }
+
+    .pokemon-card {
+        display: flex;
+        flex-direction: column;
+        align-items: center !important;
+        justify-content: center !important;
+        border: 0.1vmin solid #f7fcff;
+        padding-left: 5%;
+        /* padding-bottom: 5% !important; */
+        height: 20vh !important;
+        font-size: 4vmin;
+        background-color: #eff8ff;
+        min-width: 30vw !important;
+    }
+
+    .backing-circle {
+        margin-top: 2%;
+        margin-bottom: 2%;
+        width: 60% !important;
+        height: auto;
+        border-radius: 50%;
+        align-items: center;
+        display: flex;
+        margin-right: 10%;
+    }
+
+    .backing-circle img {
+        height: auto;
+        width: 100%;
+    }
+
+    .search-container {
+        height: 5vh !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: rgba(204, 0, 0, 1);
+    }
+
+    .detailed-view-container {
+        min-height: 75vh !important;
+        max-height: 75vh !important;
+        width: 100vw !important;
+        margin-left: auto;
+        margin-right: auto;
+        overflow: hidden;
+        background-color: #828a95;
+        font-size: 1.6vmax;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .detailed-view {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 5%;
+    }
+
+    .bio-container {
+        min-height: 50% !important;
+        max-height: 50% !important;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .bio-container img {
+        height: 20vh !important;
+        width: auto;
+        align-self: center;
+        margin-bottom: 2%;
+    }
+
+    .chart canvas {
+        font-size: 1.5vmin !important;
+        width: 100% !important;
+        height: 100% !important;
+    }
+
+    .chart {
+        display: flex;
+        height: 80%;
+        justify-content: center !important;
+        align-items: center !important;
+        text-align: center;
+    }
+
+    .stat-chart {
+        width: 80% !important;
+        display: flex;
+        flex-direction: column;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: rgba(255, 255, 255, 0.8);
+        align-items: center;
+        margin: 1% auto;
+        height: 60%;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .blurb-container {
+        max-width: 80% !important;
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+        padding: 2% 2%;
+        background-color: rgba(255, 255, 255, 0.8);
+        align-items: center;
+        font-size: 1vmax;
+        text-transform: none;
+        max-height: 50%;
     }
 }
