--- a/src/App.css
+++ b/src/App.css
@@ -167,14 +167,14 @@
     }
 
     .bio-container img {
-        height: 20vh !important;
+        height: 15vh !important;
         width: auto;
         align-self: center;
         margin-bottom: 2%;
     }
 
     .chart canvas {
-        font-size: 1.5vmin !important;
+        font-size: 1.2vmin !important;
         width: 100% !important;
         height: 100% !important;
     }
@@ -189,6 +189,7 @@
 
     .stat-chart {
         width: 80% !important;
+        height: 27vh !important;
         display: flex;
         flex-direction: column;
         margin-left: auto;
@@ -209,8 +210,12 @@
         padding: 2% 2%;
         background-color: rgba(255, 255, 255, 0.8);
         align-items: center;
-        font-size: 1vmax;
+        font-size: 2vmax !important;
         text-transform: none;
         max-height: 50%;
+    }
+
+    .pokemon-name {
+        font-size: 2.5vmax !important;
     }
 }
