--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -16,7 +16,7 @@
     background: none;
     border: none;
     cursor: pointer;
-    font-size: 1.75vmax;
+    font-size: 2.5vmax;
     color: #fff;
 }
 
@@ -24,8 +24,10 @@
     color: #fff;
     display: flex;
     padding-right: 1%;
+    cursor: pointer;
     align-items: center;
     width: 10%;
+    font-size: 2.5vmax;
 }
 
 .back,
@@ -37,4 +39,10 @@
 .back-hidden {
     width: 50%;
     visibility: hidden;
+}
+
+@media only screen and (max-width: 500px) {
+    .navigation-bar {
+        height: 5vh;
+    }
 }
