--- a/src/components/PokemonCard/PokemonCard.css
+++ b/src/components/PokemonCard/PokemonCard.css
@@ -6,6 +6,11 @@
     height: 20%;
     font-size: 4vmin;
     background-color: #eff8ff;
+    cursor: pointer;
+}
+
+.pokemon-card:hover {
+    background-color: #d7dfe5;
 }
 
 .backing-circle {
@@ -22,4 +27,19 @@
 .backing-circle img {
     height: auto;
     width: 100%;
+}
+
+@media only screen and (max-width: 500px) {
+    .pokemon-card {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 20vh;
+        min-width: 30vw;
+        max-width: 30vw;
+    }
+
+    .backing-circle {
+        width: 60%;
+    }
 }
