--- a/src/components/PokemonBlurb/PokemonBlurb.css
+++ b/src/components/PokemonBlurb/PokemonBlurb.css
@@ -6,14 +6,14 @@
     padding: 2% 2%;
     background-color: rgba(255, 255, 255, 0.8);
     align-items: center;
-    font-size: 1vmax;
+    font-size: 1.5vmax;
     text-transform: none;
     max-height: 50%;
 }
 
 @media only screen and (max-width: 850px) {
     .blurb-container {
-        max-width: 80% !important;
+        max-width: 80%;
         font-size: 2vmax;
     }
 }
