--- a/src/components/PokemonTypes/PokemonTypes.css
+++ b/src/components/PokemonTypes/PokemonTypes.css
@@ -2,8 +2,13 @@
     margin: 2% auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 20%;
+    font-size: 2.5vmax;
+}
+
+.type-label {
+    margin-bottom: 5%;
 }
 
 @media only screen and (max-width: 500px) {
