--- a/src/components/DetailedView/DetailedView.css
+++ b/src/components/DetailedView/DetailedView.css
@@ -44,6 +44,10 @@
 .pokemon-name {
     font-size: 2.5vmax;
     margin-top: 2%;
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media only screen and (max-width: 500px) {
