--- a/src/components/DetailedView/DetailedView.css
+++ b/src/components/DetailedView/DetailedView.css
@@ -45,7 +45,8 @@
     font-size: 2.5vmax;
     margin-top: 2%;
     background-color: rgba(255, 255, 255, 0.8);
-    width: 60%;
+    width: fit-content;
+    padding: 1% 2%;
     margin-left: auto;
     margin-right: auto;
 }
